--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -44,7 +44,7 @@ services:
       - "3000:3000"
     volumes:
       - ./api:/usr/src/app
-      - /usr/src/app/node_modules
+      - ./api/node_modules:/usr/src/app/node_modules
     networks:
       - services_net
 
