--- a/api/package.json
+++ b/api/package.json
@@ -1,16 +1,24 @@
 {
-    "name": "api-opiniones",
-    "version": "1.0.0",
-    "main": "server.js",
-    "type": "module",
-    "scripts": {
-        "start": "node server.js"
-    },
-    "dependencies": {
-        "express": "^4.19.2",
-        "mysql2": "^3.10.1",
-        "mongoose": "^8.6.0",
-        "cors": "^2.8.5",
-        "body-parser": "^1.20.2"
-    }
+  "name": "api-opiniones",
+  "version": "1.0.0",
+  "description": "API Node/Express para opiniones de productos en MongoDB y MySQL",
+  "main": "server.js",
+  "type": "module",
+  "scripts": {
+    "start": "node server.js",
+    "dev": "nodemon server.js"
+  },
+  "dependencies": {
+    "express": "^4.19.2",
+    "mysql2": "^3.10.1",
+    "mongoose": "^8.6.0",
+    "cors": "^2.8.5",
+    "body-parser": "^1.20.2",
+    "dotenv": "^16.4.5"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.4"
+  },
+  "author": "xyz",
+  "license": "MIT"
 }
