--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -1,7 +1,10 @@
-FROM node:22
+FROM node:18-alpine
 WORKDIR /usr/src/app
 COPY package*.json ./
 RUN npm install
 COPY . .
-EXPOSE 3000
-CMD ["node", "server.js"]
+EXPOSE ${PORT}
+CMD ["npm", "start"]
+
+
+
